--- a/dooked/dooked.vcxproj
+++ b/dooked/dooked.vcxproj
@@ -114,7 +114,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>D:\boost_1_75\include;D:\Visual Studio Projects\dooked\dooked\include;D:\Visual Studio Projects\dooked\dooked\third-party\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
