--- a/dooked/dooked.vcxproj.filters
+++ b/dooked/dooked.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="source\domainname.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\ucstring.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\utils.hpp">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\domainname.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ucstring.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
