--- a/dooked/dooked.vcxproj
+++ b/dooked/dooked.vcxproj
@@ -143,14 +143,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dooked.cpp" />
-    <ClCompile Include="source\domainname.cpp" />
+    <ClCompile Include="source\dns.cpp" />
     <ClCompile Include="source\resolver.cpp" />
     <ClCompile Include="source\ucstring.cpp" />
     <ClCompile Include="source\utils.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\domainname.hpp" />
+    <ClInclude Include="include\dns.hpp" />
     <ClInclude Include="include\resolver.hpp" />
+    <ClInclude Include="include\tdefines.hpp" />
     <ClInclude Include="include\ucstring.hpp" />
     <ClInclude Include="include\utils.hpp" />
   </ItemGroup>
