--- a/tests/tests.vcxproj.filters
+++ b/tests/tests.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="..\dooked\source\utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\dooked\source\requests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
