--- a/dooked/dooked.vcxproj.filters
+++ b/dooked/dooked.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="source\requests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\http_resolver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\utils.hpp">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\requests.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\http_resolver.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
