--- a/dooked/dooked.vcxproj
+++ b/dooked/dooked.vcxproj
@@ -148,18 +148,18 @@
     <ClCompile Include="dooked.cpp" />
     <ClCompile Include="source\dns.cpp" />
     <ClCompile Include="source\http_resolver.cpp" />
-    <ClCompile Include="source\preprocessor.cpp" />
-    <ClCompile Include="source\requests.cpp" />
-    <ClCompile Include="source\resolver.cpp" />
+    <ClCompile Include="source\cli_preprocessor.cpp" />
+    <ClCompile Include="source\http_requests_handler.cpp" />
+    <ClCompile Include="source\dns_resolver.cpp" />
     <ClCompile Include="source\ucstring.cpp" />
     <ClCompile Include="source\utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\dns.hpp" />
     <ClInclude Include="include\http_resolver.hpp" />
-    <ClInclude Include="include\preprocessor.hpp" />
-    <ClInclude Include="include\requests.hpp" />
-    <ClInclude Include="include\resolver.hpp" />
+    <ClInclude Include="include\cli_preprocessor.hpp" />
+    <ClInclude Include="include\http_requests_handler.hpp" />
+    <ClInclude Include="include\dns_resolver.hpp" />
     <ClInclude Include="include\tdefines.hpp" />
     <ClInclude Include="include\ucstring.hpp" />
     <ClInclude Include="include\utils.hpp" />
